--- a/14.2/vault-pod.yml
+++ b/14.2/vault-pod.yml
@@ -12,6 +12,6 @@ spec:
       protocol: TCP
     env:
     - name: VAULT_DEV_ROOT_TOKEN_ID
-      value: "aiphohTaa0eeHei"
+      value: "VasIstDasVaulKey12324"
     - name: VAULT_DEV_LISTEN_ADDRESS
       value: 0.0.0.0:8200
